crates/kul-render/tests/snapshots/transform__empty_document_yields_empty_shape.snap
---
source: crates/kul-render/tests/transform.rs
expression: render_pretty(&envelope)
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "components": [],
  "edges": []
}
