crates/kul-render/tests/snapshots/transform__failure_envelope_passes_through_with_diagnostics.snap
---
source: crates/kul-render/tests/transform.rs
expression: render_pretty(&envelope)
---
{
  "ok": false,
  "diagnostics": [
    {
      "code": "KUL-R02",
      "severity": "error",
      "message": "unresolved reference `ghost`",
      "related": []
    }
  ]
}
