crates/kul-render/tests/snapshots/transform__p16_three_adoptions_emit_one_canonical_and_two_past_ghosts.snap
---
source: crates/kul-render/tests/transform.rs
expression: render_pretty(&envelope)
---
{
  "ok": true,
  "schema": 2,
  "kul": "0.1",
  "components": [
    {
      "id": "comp-1",
      "sourceOrder": 0,
      "kind": {
        "type": "familyTree",
        "root": {
          "slot": {
            "personId": "a1",
            "kind": {
              "kind": "canonical"
            },
            "generation": 0,
            "name": "A1",
            "gender": "female"
          },
          "hostedMarriages": [
            {
              "bar": {
                "marriageId": "m_a",
                "generation": 0,
                "hostId": "a1",
                "joiningId": "a2",
                "joiningSlot": {
                  "personId": "a2",
                  "kind": {
                    "kind": "canonical"
                  },
                  "generation": 0,
                  "name": "A2",
                  "gender": "male"
                },
                "start": {
                  "value": "1970",
                  "precision": "year",
                  "circa": false
                },
                "ended": false
              },
              "children": [
                {
                  "slot": {
                    "personId": "kid",
                    "kind": {
                      "kind": "ghost",
                      "reason": "pastAdoption"
                    },
                    "generation": 1,
                    "name": "Kid",
                    "gender": "other"
                  },
                  "hostedMarriages": []
                }
              ]
            }
          ]
        }
      }
    },
    {
      "id": "comp-2",
      "sourceOrder": 0,
      "kind": {
        "type": "familyTree",
        "root": {
          "slot": {
            "personId": "b1",
            "kind": {
              "kind": "canonical"
            },
            "generation": 0,
            "name": "B1",
            "gender": "female"
          },
          "hostedMarriages": [
            {
              "bar": {
                "marriageId": "m_b",
                "generation": 0,
                "hostId": "b1",
                "joiningId": "b2",
                "joiningSlot": {
                  "personId": "b2",
                  "kind": {
                    "kind": "canonical"
                  },
                  "generation": 0,
                  "name": "B2",
                  "gender": "male"
                },
                "start": {
                  "value": "1975",
                  "precision": "year",
                  "circa": false
                },
                "ended": false
              },
              "children": [
                {
                  "slot": {
                    "personId": "kid",
                    "kind": {
                      "kind": "ghost",
                      "reason": "pastAdoption"
                    },
                    "generation": 1,
                    "name": "Kid",
                    "gender": "other"
                  },
                  "hostedMarriages": []
                }
              ]
            }
          ]
        }
      }
    },
    {
      "id": "comp-3",
      "sourceOrder": 0,
      "kind": {
        "type": "familyTree",
        "root": {
          "slot": {
            "personId": "c1",
            "kind": {
              "kind": "canonical"
            },
            "generation": 0,
            "name": "C1",
            "gender": "female"
          },
          "hostedMarriages": [
            {
              "bar": {
                "marriageId": "m_c",
                "generation": 0,
                "hostId": "c1",
                "joiningId": "c2",
                "joiningSlot": {
                  "personId": "c2",
                  "kind": {
                    "kind": "canonical"
                  },
                  "generation": 0,
                  "name": "C2",
                  "gender": "male"
                },
                "start": {
                  "value": "1978",
                  "precision": "year",
                  "circa": false
                },
                "ended": false
              },
              "children": [
                {
                  "slot": {
                    "personId": "kid",
                    "kind": {
                      "kind": "canonical"
                    },
                    "generation": 1,
                    "name": "Kid",
                    "gender": "other"
                  },
                  "hostedMarriages": []
                }
              ]
            }
          ]
        }
      }
    }
  ],
  "edges": [
    {
      "kind": "adoption",
      "childId": "kid",
      "marriageId": "m_a",
      "start": {
        "value": "1981",
        "precision": "year",
        "circa": false
      }
    },
    {
      "kind": "adoption",
      "childId": "kid",
      "marriageId": "m_b",
      "start": {
        "value": "1985",
        "precision": "year",
        "circa": false
      }
    },
    {
      "kind": "adoption",
      "childId": "kid",
      "marriageId": "m_c",
      "start": {
        "value": "1992",
        "precision": "year",
        "circa": false
      }
    }
  ]
}
