crates/kul-render/tests/snapshots/transform__p6_joining_spouse_birth_family_renders_as_independent_component.snap
---
source: crates/kul-render/tests/transform.rs
expression: render_pretty(&envelope)
---
{
  "ok": true,
  "schema": 3,
  "kul": "0.1",
  "components": [
    {
      "id": "comp-1",
      "sourceOrder": 0,
      "kind": {
        "type": "familyTree",
        "root": {
          "slot": {
            "personId": "bob_dad",
            "kind": {
              "kind": "canonical"
            },
            "generation": 0,
            "name": "Bob's Dad",
            "gender": "male"
          },
          "hostedMarriages": [
            {
              "bar": {
                "marriageId": "m_bob_parents",
                "generation": 0,
                "hostId": "bob_dad",
                "joiningId": "bob_mom",
                "joiningSlot": {
                  "personId": "bob_mom",
                  "kind": {
                    "kind": "canonical"
                  },
                  "generation": 0,
                  "name": "Bob's Mom",
                  "gender": "female"
                },
                "start": {
                  "value": "1945",
                  "precision": "year",
                  "circa": false
                },
                "ended": false
              },
              "children": [
                {
                  "slot": {
                    "personId": "bob",
                    "kind": {
                      "kind": "ghost",
                      "reason": "pastBirth"
                    },
                    "generation": 1,
                    "name": "Bob",
                    "gender": "male"
                  },
                  "hostedMarriages": []
                }
              ]
            }
          ]
        }
      }
    },
    {
      "id": "comp-2",
      "sourceOrder": 0,
      "kind": {
        "type": "familyTree",
        "root": {
          "slot": {
            "personId": "alice",
            "kind": {
              "kind": "canonical"
            },
            "generation": 0,
            "name": "Alice",
            "gender": "female"
          },
          "hostedMarriages": [
            {
              "bar": {
                "marriageId": "m_alice_bob",
                "generation": 1,
                "hostId": "alice",
                "joiningId": "bob",
                "joiningSlot": {
                  "personId": "bob",
                  "kind": {
                    "kind": "canonical"
                  },
                  "generation": 1,
                  "name": "Bob",
                  "gender": "male"
                },
                "start": {
                  "value": "1972",
                  "precision": "year",
                  "circa": false
                },
                "ended": false
              },
              "children": [
                {
                  "slot": {
                    "personId": "kid",
                    "kind": {
                      "kind": "canonical"
                    },
                    "generation": 2,
                    "name": "Kid",
                    "gender": "other"
                  },
                  "hostedMarriages": []
                }
              ]
            }
          ]
        }
      }
    }
  ],
  "edges": [
    {
      "kind": "birth",
      "childId": "bob",
      "marriageId": "m_bob_parents"
    },
    {
      "kind": "birth",
      "childId": "kid",
      "marriageId": "m_alice_bob"
    }
  ]
}
