crates/kul-render/tests/snapshots/transform__p8_polygamy_picks_most_recent_unended_as_primary.snap
---
source: crates/kul-render/tests/transform.rs
expression: render_pretty(&envelope)
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "components": [
    {
      "id": "comp-1",
      "sourceOrder": 0,
      "kind": {
        "type": "familyTree",
        "root": {
          "bar": {
            "marriageId": "m_d_m",
            "generation": 0,
            "hostId": "d",
            "joiningId": "m",
            "hostSlot": {
              "personId": "d",
              "kind": {
                "kind": "ghost",
                "reason": "pastMarriage"
              },
              "generation": 0,
              "name": "Devraj",
              "gender": "male"
            },
            "joiningSlot": {
              "personId": "m",
              "kind": {
                "kind": "canonical"
              },
              "generation": 0,
              "name": "Meera",
              "gender": "female"
            },
            "start": {
              "value": "1990",
              "precision": "year",
              "circa": false
            },
            "ended": false
          },
          "children": []
        }
      }
    },
    {
      "id": "comp-2",
      "sourceOrder": 0,
      "kind": {
        "type": "familyTree",
        "root": {
          "bar": {
            "marriageId": "m_a_d",
            "generation": 0,
            "hostId": "a",
            "joiningId": "d",
            "hostSlot": {
              "personId": "a",
              "kind": {
                "kind": "canonical"
              },
              "generation": 0,
              "name": "Alice",
              "gender": "female"
            },
            "joiningSlot": {
              "personId": "d",
              "kind": {
                "kind": "canonical"
              },
              "generation": 0,
              "name": "Devraj",
              "gender": "male"
            },
            "start": {
              "value": "1995",
              "precision": "year",
              "circa": false
            },
            "ended": false
          },
          "children": []
        }
      }
    }
  ],
  "edges": []
}
